--- a/Birthday Reminder/View/Base.lproj/Main.storyboard
+++ b/Birthday Reminder/View/Base.lproj/Main.storyboard
@@ -47,11 +47,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="160" height="190"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aMZ-TW-MM3">
-                                                    <rect key="frame" x="8" y="8" width="144" height="110"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user" translatesAutoresizingMaskIntoConstraints="NO" id="aMZ-TW-MM3">
+                                                    <rect key="frame" x="22" y="8" width="116" height="110"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="143" id="Hlm-Qd-atW"/>
-                                                        <constraint firstAttribute="height" constant="114" id="Oyj-3v-GAS"/>
+                                                        <constraint firstAttribute="width" constant="116" id="Hlm-Qd-atW"/>
+                                                        <constraint firstAttribute="height" constant="110" id="Oyj-3v-GAS"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8u-Nn-qpg">
@@ -76,9 +76,9 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="aMZ-TW-MM3" firstAttribute="leading" secondItem="dkj-59-IgR" secondAttribute="leading" constant="8" id="4Pz-Wr-TBD"/>
+                                                <constraint firstItem="aMZ-TW-MM3" firstAttribute="leading" secondItem="dkj-59-IgR" secondAttribute="leading" constant="22" id="4Pz-Wr-TBD"/>
                                                 <constraint firstAttribute="bottom" secondItem="X7M-4h-RxX" secondAttribute="bottom" constant="8" id="E3C-f2-K6f"/>
-                                                <constraint firstAttribute="trailing" secondItem="aMZ-TW-MM3" secondAttribute="trailing" constant="8" id="FRt-RE-2Tf"/>
+                                                <constraint firstAttribute="trailing" secondItem="aMZ-TW-MM3" secondAttribute="trailing" constant="22" id="FRt-RE-2Tf"/>
                                                 <constraint firstItem="X7M-4h-RxX" firstAttribute="top" secondItem="L8u-Nn-qpg" secondAttribute="bottom" constant="8" id="G0H-Y8-exD"/>
                                                 <constraint firstAttribute="trailing" secondItem="X7M-4h-RxX" secondAttribute="trailing" constant="8" id="LLy-W7-I7C"/>
                                                 <constraint firstAttribute="trailing" secondItem="L8u-Nn-qpg" secondAttribute="trailing" constant="8" id="Mml-yo-XEf"/>
@@ -295,6 +295,9 @@
                     <navigationItem key="navigationItem" id="Lcw-94-99n">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="8k8-Zf-04a">
                             <color key="tintColor" red="1" green="0.64313725489999995" blue="0.31764705879999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="canclButtonPressed:" destination="qRg-Gm-yf3" id="za5-25-9V0"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="vc5-em-OeW">
                             <color key="tintColor" red="1" green="0.64313725489999995" blue="0.31764705879999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -370,7 +373,7 @@
         <!--Navigation Controller-->
         <scene sceneID="E7s-ew-B1B">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f1e-0l-jWc" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="createNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="f1e-0l-jWc" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="" id="9Yw-Fa-a8z">
                         <imageReference key="image" image="plus" catalog="system" symbolScale="large" renderingMode="hierarchical">
                             <hierarchicalColors>
