--- a/Birthday Reminder/View/Base.lproj/Main.storyboard
+++ b/Birthday Reminder/View/Base.lproj/Main.storyboard
@@ -159,7 +159,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1820.289855072464" y="93.75"/>
+            <point key="canvasLocation" x="2030" y="94"/>
         </scene>
         <!--Create View Controller-->
         <scene sceneID="3aA-uX-rRb">
@@ -344,7 +344,6 @@
                             <color key="tintColor" red="1" green="0.64313725489999995" blue="0.31764705879999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="doneButtonPressed:" destination="qRg-Gm-yf3" id="MVc-Kw-L1x"/>
-                                <segue destination="pjV-Yx-VFr" kind="showDetail" id="jtG-nt-1Sh"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -361,25 +360,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IBN-yi-bds" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3433.3333333333335" y="93.75"/>
+            <point key="canvasLocation" x="3341" y="94"/>
         </scene>
         <!--Item-->
         <scene sceneID="PXO-BR-NqZ">
             <objects>
-                <viewController id="pjV-Yx-VFr" customClass="SuccessViewController" customModule="Birthday_Reminder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SuccessViewController" id="pjV-Yx-VFr" customClass="SuccessViewController" customModule="Birthday_Reminder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SmG-rw-Rst">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="success" translatesAutoresizingMaskIntoConstraints="NO" id="LTu-kj-kJK">
-                                <rect key="frame" x="125" y="183" width="164" height="164"/>
+                                <rect key="frame" x="125" y="227" width="164" height="164"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="164" id="CdV-lQ-XxK"/>
                                     <constraint firstAttribute="width" constant="164" id="dXe-WZ-30w"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your order have been taken and is being attended to" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="L6Y-8O-lYN">
-                                <rect key="frame" x="82" y="410" width="250" height="80"/>
+                                <rect key="frame" x="82" y="454" width="250" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="VaY-4o-4Kz"/>
                                     <constraint firstAttribute="height" constant="80" id="vYp-Df-9fy"/>
@@ -389,7 +388,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0nW-7t-Obm">
-                                <rect key="frame" x="139.5" y="580" width="135" height="55"/>
+                                <rect key="frame" x="139.5" y="624" width="135" height="55"/>
                                 <color key="backgroundColor" red="1" green="0.64313725489999995" blue="0.31764705879999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="135" id="9Qo-tO-8hx"/>
@@ -405,7 +404,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Success!!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YI7-n9-Tde">
-                                <rect key="frame" x="94.5" y="355" width="225" height="45"/>
+                                <rect key="frame" x="94.5" y="399" width="225" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="225" id="DdG-T4-HKG"/>
                                     <constraint firstAttribute="height" constant="45" id="bvQ-Io-UVT"/>
@@ -440,7 +439,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Hg-rf-bNH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4239" y="94"/>
+            <point key="canvasLocation" x="4075" y="94"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="WbC-rh-WWF">
@@ -489,7 +488,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oPO-lt-9Ez" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="910.14492753623199" y="93.75"/>
+            <point key="canvasLocation" x="1368" y="94"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="E7s-ew-B1B">
@@ -515,11 +514,12 @@
                     <nil name="viewControllers"/>
                     <connections>
                         <segue destination="qRg-Gm-yf3" kind="relationship" relationship="rootViewController" id="eGp-Xg-GsK"/>
+                        <segue destination="pjV-Yx-VFr" kind="custom" id="wb7-2Q-mzf"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CrG-Gs-7xb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2523.1884057971015" y="93.75"/>
+            <point key="canvasLocation" x="2690" y="94"/>
         </scene>
     </scenes>
     <resources>
